--- a/lina_dicto/default_extension/style.css
+++ b/lina_dicto/default_extension/style.css
@@ -59,6 +59,8 @@ body{
 
 .timeline__item__response__string__sub{
 	/* ex. "`bon/a`:{Ｂ}良い,善良な,りっぱな" */
+	font-size:40%;
+	font-family: Consolas, 'Courier New', Courier, Monaco, monospace;
 }
 
 #query-area{
