--- a/lina_dicto/css/style.css
+++ b/lina_dicto/css/style.css
@@ -86,3 +86,12 @@ ex. "bona | Bonaero | bonaj^o"
 	cursor: pointer;	/* リンクカーソル */
 }
 
+.goto-google-translate-button{
+	text-decoration: underline;
+	margin-left:5px;
+	margin-right:5px;
+	border: 1px solid;
+	border-color: rgba( 0, 0, 0, 0.1);
+	cursor: pointer;	/* リンクカーソル */
+}
+
