--- a/lina_dicto/css/style.css
+++ b/lina_dicto/css/style.css
@@ -1,16 +1,21 @@
 @charset "utf-8";
 
-body{
-	font-size:150%;
-}
 
 html, body{
 	margin: 0;         /* 余白の削除 */
 	padding: 0;        /* 余白の削除 */
 	width:100%;
 	height:100%;
+}
 
+html{
 	background: linear-gradient(-30deg, rgba(190, 255, 190, 1), rgba(215, 255, 215, 1));
+}
+body{
+	background: url("./image/sky.png") center center / cover no-repeat fixed
+}
+body{
+	font-size:150%;
 }
 
 div#query-area
