--- a/lina_dicto/css/style.css
+++ b/lina_dicto/css/style.css
@@ -22,17 +22,32 @@ html, body{
 	height:100%;
 }
 
-div#query-area
-{
-	position: fixed;			/* フッターの固定 */
-	bottom: 0px;				/* 位置(下0px) */
-	left: 0px;				/* 位置(左0px) */
-	width: 100%;				/* 横幅100%　*/
-	/*height: 140px;*/			/* 縦幅140px */
+/* ****
+ * general
+ * **** */
+
+.goto-google-translate-button{
+	text-decoration: underline;
+	margin-left:5px;
+	margin-right:5px;
+	border: 1px solid;
+	border-color: rgba( 128, 128, 128, 0.5);
+	cursor: pointer;	/* リンクカーソル */
 }
 
+.juriamo_assign{
+	display: none; /* デフォルト非表示(設定で表示) */
+	font-size:40%;
+	font-family: Consolas, 'Courier New', Courier, Monaco, monospace;
+}
+
+
+/* ****
+ * timeline
+ * **** */
+
 #timeline{
-	padding-bottom: 85px;		/* #query-area + マージン */
+	padding-bottom: calc((60px + 23px) + 10px);		/* #query-area + マージン */
 }
 
 .timeline__item__query{
@@ -68,25 +83,40 @@ div#query-area
 .timeline__item__response__string__sub__juriamo_assign{
 }
 
+
+/* ****
+* Query area
+* **** */
+
 #query-area{
-	background: rgba(190, 255, 190, 0.9);
+	background: rgba(190, 255, 190, 1.0);
+}
+
+#query-area
+{
+	position: fixed;			/* フッターの固定 */
+	bottom: 0px;				/* 位置(下0px) */
+	left: 0px;				/* 位置(左0px) */
+	width: 100%;				/* 横幅100%　*/
+	/*height: 140px;*/			/* 縦幅140px */
 }
 
 #query-area__query-input{
 }
 
-/** 入力欄Element(<input>) */
+/** text input (input Element) */
 #query-area__query-input__input{
 	width:99%;
 	font-size:150%;
 	height:60px;
 	vertical-align: middle;
 	/*font-family: Consolas, 'Courier New', Courier, Monaco, monospace;*/
-	background-color: rgba(230, 255, 230, 0.7);
+	background-color: rgba(250, 255, 250, 0.1);
 }
 
+/* query icon button for lina_dicto_for_android */
 #query-area__query-input__button{
-	height:60px;
+	/* height:60px; */
 	vertical-align: middle;
 	display:none;
 }
@@ -97,37 +127,26 @@ ex. "bona | Bonaero | bonaj^o"
  */
 #query-area__query-incrementals{
 	margin-top:3px;
+	margin-bottom:2px;
 	width:100%;
 	font-size:60%;
-	height:17px;
-	font-family: Consolas, 'Courier New', Courier, Monaco, monospace;
-	color: rgba(0, 40, 0, 0.7);
-}
-
-.input-replace-button{
-	margin-left:5px;
-	margin-right:5px;
-	border: 1px solid;
-	border-color: rgba( 0, 0, 0, 0.1);
-	cursor: pointer;	/* リンクカーソル */
-}
-
-.goto-google-translate-button{
-	text-decoration: underline;
-	margin-left:5px;
-	margin-right:5px;
-	border: 1px solid;
-	border-color: rgba( 0, 0, 0, 0.1);
-	cursor: pointer;	/* リンクカーソル */
-}
-
-.juriamo_assign{
-	display: none; /* デフォルト非表示(設定で表示) */
-	font-size:40%;
+	height:18px;
 	font-family: Consolas, 'Courier New', Courier, Monaco, monospace;
 }
 
-/* Text and background color for dark mode */
+#query-area__query-incrementals .input-replace-button{
+	margin-left:5px;
+	margin-right:5px;
+	border: 1px solid;
+	border-color: rgba(160, 160, 160, 0.4);
+	cursor: pointer;	/* リンクカーソル */
+}
+
+
+/* ****
+* dark mode
+* **** */
+
 @media (prefers-color-scheme: dark) {
 	html{
 		background: rgb(20, 21, 20);
@@ -135,26 +154,22 @@ ex. "bona | Bonaero | bonaj^o"
 	body{
 		background: url("./image/sky-darkmode.png") center center / cover no-repeat fixed
 	}
-	/* Text and background color for light mode */
+
 	body {
 		color: #ddd;
 		background-color: rgb(20, 21, 20);
 		font-family: Consolas, 'Courier New', Courier, Monaco, monospace;
 	}
 
-	#query-area{
-		background-color: rgba(33, 35, 33, 0.9);
-	}
 	.timeline__item__query{
 		background-color: rgba(0, 0, 0, 0.8);
 	}
+
+	#query-area{
+		background-color: rgba(33, 35, 33, 1.0);
+		color: #ddd;
+	}
 	#query-area__query-input__input{
 		color: #ddd;
-		background-color: rgba(40, 40, 40, 1);
-	}
-	#query-area__query-incrementals{
-		color: #ddd;
-		background-color: rgba(40, 40, 40, 1);
 	}
 }
-
