default user.css

--- a/lina_dicto/resource/default-user.css
+++ b/lina_dicto/resource/default-user.css
@@ -10,8 +10,14 @@ lina_dictoのユーザ拡張サンプル css部分
 queryとresponse(検索キーワードと意味)は繰り返し登場するので共通のclass属性で与えられる。
 また、それとは別に、queryとresponseの対が特定できるMessageId(ゼロからインクリメントされていく値)が、id属性で与えられる。
 
- */
+記載されている内容は、あくまで参考程度の情報です。
+最新版の変更が反映されていない場合があります。
+*/
 
+body{
+	/* 改造例。この下の記載のコメントアウトを外すと、入力欄以外がピンク色に変化する（はず）。 */
+	/* background-color: pink; */
+}
 
 #timeline{
 	/* タイムライン(検索履歴) */
